--- a/MyTour/style.css
+++ b/MyTour/style.css
@@ -138,7 +138,7 @@ color: #2d9cdb;
   width: 16px;
   height: 17px;
   background-position: center;
-   background-image: url("img\plus (1) 2.png");
+   background-image: url("img/plus (1) 2.png");
   background-repeat: no-repeat;
 }
 
@@ -158,7 +158,7 @@ color: #333333;
   appearance: none;
    -webkit-appearance: none;
   -moz-appearance: none;
-  	background-image: url("img\cancel.png");
+  	background-image: url("img/cancel.png");
 	background-position: right 13px center;
 	background-repeat: no-repeat;
 }
@@ -214,7 +214,7 @@ margin-top: 35px;
   margin: auto 0;
   width: 16px;
   height: 16px;
-   background-image: url("img\arrow_2.png");
+   background-image: url("img/arrow_2.png");
   background-repeat: no-repeat;
 }  
 
@@ -281,7 +281,7 @@ h2 {
 }
 
 .thailand {
-  background-image: url("img\Image 6.png");
+  background-image: url("img/Image 6.png");
   background-repeat: no-repeat;
   background-position: 10% 50%;
   position: relative;
@@ -293,14 +293,14 @@ h2 {
 }
 
 .vietnam {
-    background-image: url("img\Image 7.png");
+    background-image: url("img/Image 7.png");
   background-repeat: no-repeat;
   background-position: 10% 50%;
     position: relative;
 }
 
 .indonesia {
-    background-image: url("img\Image 8.png");
+    background-image: url("img/Image 8.png");
   background-repeat: no-repeat;
   background-position: 10% 50%;  
     position: relative;
@@ -310,7 +310,7 @@ h2 {
   border: 0;
   width: 13px;
   height: 13px;
-  background-image: url("img\cancel.png");
+  background-image: url("img/cancel.png");
   background-position: center;
   background-color: #f2f2f2;
   position: absolute;
@@ -507,7 +507,7 @@ h2 {
   margin: auto 0px auto -22px;
   width: 16px;
   height: 16px;
-   background-image: url("img\error (1).png");
+   background-image: url("img/error (1).png");
   background-repeat: no-repeat;
 }  
 
@@ -541,7 +541,7 @@ select:active, select:focus {
   margin-top: 7px;
   width: 13px;
   height: 13px;
-   background-image: url("img\rating.png");
+   background-image: url("img/rating.png");
   background-repeat: no-repeat;
   margin-left: 70px;
 }
